fixing firefox bug which caused chart to collapse on itself. Adding display: block to the label elements corrected this bug because without display: block their width was not calculated correctly. rally ticket: https://rally1.rallydev.com/#/33932457711d/detail/defect/43130428489

--- a/css/px-simple-line-chart.css
+++ b/css/px-simple-line-chart.css
@@ -81,7 +81,8 @@ text.axisLabel {
   fill: #7C7C84;
   font-family: sans-serif;
   font-size: 14px;
-  font-weight: lighter; }
+  font-weight: lighter;
+  display: block; }
 
 .chartLine {
   stroke: #01B2E5;
