--- a/sass/chart.scss
+++ b/sass/chart.scss
@@ -18,6 +18,7 @@ text.axisLabel {
     font-family: sans-serif;
     font-size: 14px;
     font-weight: lighter;
+    display: block;
 }
 .chartLine {
     stroke: #01B2E5;
